config/samples/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-namespace
  name: test-name
  annotations:
    # No prefix provided, thus, service test-name.test-namespace.<suffix> is used.
    "service.beta.kubernetes.io/avahi-publish": "-"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: web
      targetPort: web
status:
  loadBalancer:
    ingress:
      - ip: 10.0.0.1
