config/samples/service_no_annotation.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-namespace
  name: test-name
  annotations: {}
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: web
      targetPort: web
status:
  loadBalancer:
    ingress:
      - ip: 10.0.0.1
